working with Login component

--- a/src/Components/Login.css
+++ b/src/Components/Login.css
@@ -1,15 +1,22 @@
  .login_box {
-   position: relative;
-   top: 50px;
    
+   
+   position: relative;
+   top: 30px;
+   left: 50px;
+   right: 50px;
     background-color: aquamarine;
-    width: 1000;
-    height: 1000;
+    width: 900px;
+    height: 600px;
  }
 
+.account_type {
+position: relative;
+top: 30px;
+left: 250px;
 
 
-.hr,.p {
-    display:inline;
-    }
+}
+
+
     
